--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="app__topbar schema--blue">
             <div class="app__wrapper">
                 <div class="grid">
-                    <ul class="list--unstyled list--inline">
+                    <ul class="list-unstyled list-inline">
                         <li>Hello</li>
                         <li>There</li>
                     </ul>
@@ -45,6 +45,32 @@
                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur recusandae quibusdam ut beatae fugiat voluptatibus architecto quia, iusto a nostrum soluta ducimus, cum assumenda consequatur veritatis dolor! Odio quas, dolores?</li>
                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur recusandae quibusdam ut beatae fugiat voluptatibus architecto quia, iusto a nostrum soluta ducimus, cum assumenda consequatur veritatis dolor! Odio quas, dolores?</li>
                     </ul>
+                    <p>
+                        <a class="btn" href="#">Button</a>
+                        <a class="btn" href="#">Button</a>
+                    </p>
+                    <div class="media">
+                        <div class="media__aside">
+                            <p class="cover cover--circle">
+                                <img src="assets/avatar.jpg" alt="">
+                            </p>
+                        </div>
+                        <div class="media__main">
+                            <h4>lorem ipsum</h4>
+                            <p class="small muted">lorem ipsum</p>
+                        </div>
+                    </div>
+                    <div class="media">
+                        <div class="media__aside">
+                            <p class="cover cover--circle">
+                                <img src="assets/avatar.jpg" alt="">
+                            </p>
+                        </div>
+                        <div class="media__main">
+                            <h4>lorem ipsum</h4>
+                            <p class="small muted">lorem ipsum</p>
+                        </div>
+                    </div>
                     <div class="card">
                         <p class="card__cover">
                             <a class="cover" href="#">
